# SpotMicroAI_RemotePC

./: README.md
spot_visual_pkg/: CMakeLists.txt  package.xml
spot_visual_pkg/config/: config.rviz
spot_visual_pkg/launch/: PC_test.launch.py
